unpackaged/main/default/objects/Customer_Form__c/Customer_Form__c.object-meta.xml
<CustomObject>
    <description>Records in this object represent an instance of a customer going through the SBL webform. Each time a customer completes the webform, a record should be created to track their inputs.</description>
    <label>Customer Form</label>
    <nameField>
        <displayFormat>CustomerForm-{000000}</displayFormat>
        <label>Customer Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>