unpackaged/main/default/objects/Customer_Form__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Customer Account</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Account must have a record type of Customer</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Forms</relationshipLabel>
    <relationshipName>Customer_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>