unpackaged/main/default/objects/Customer_Form__c/fields/Date_Established_Question__c.field-meta.xml
<CustomField>
    <fullName>Date_Established_Question__c</fullName>
    <description>Created to accept input from the “When was your business established?” question on the online webform. Currently this question allows users to input the Date Established (maps to the Date Established field) or select a radio button labeled “Not yet started”. If Date Provided is selected in this picklist, the Date Established field should not be null</description>
    <label>Date Established Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet started</fullName>
            </value>
            <value>
                <fullName>Date provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>