unpackaged/main/default/objects/Customer_Form__c/fields/Has_Business_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Business_Bank_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Business Bank Account</label>
    <type>Checkbox</type>
</CustomField>