unpackaged/main/default/objects/Customer_Form__c/fields/Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>Interested_Product__c</fullName>
    <description>Shows the product the customer showed interest in before being redirected to the web form. Tracked via UTM params in the URL. Example would be if a customer selected Small Business Loans on a partner website, then they sent the customer to SBL for qualification</description>
    <label>Interested Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBA Loans</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Lines of Credit</fullName>
            </value>
            <value>
                <fullName>Small Business Loans</fullName>
            </value>
            <value>
                <fullName>Equipment Financing</fullName>
            </value>
            <value>
                <fullName>POS Equipment</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>