unpackaged/main/default/objects/Customer_Form__c/fields/Open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Open Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Forms (Open Opportunity)</relationshipLabel>
    <relationshipName>Customer_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>