unpackaged/main/default/objects/Customer_Form__c/fields/Personal_Address__c.field-meta.xml
<CustomField>
    <fullName>Personal_Address__c</fullName>
    <label>Personal Address</label>
    <type>Address</type>
</CustomField>