unpackaged/main/default/objects/Customer_Form__c/fields/Self_Reported_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Self_Reported_Annual_Revenue__c</fullName>
    <description>"Revenue" and "Sales" are being treated as the same thing by the business. If the website says "Sales" we can interchange with "Revenue"</description>
    <label>Self Reported Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>