unpackaged/main/default/objects/Customer_Form__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>