unpackaged/main/default/objects/Customer_Form__c/validationRules/Date_Established_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Established_Validation</fullName>
    <active>true</active>
    <description>Ensure a date established is not null when the Date Established question is set to "date provided"</description>
    <errorConditionFormula>ISPICKVAL(Date_Established_Question__c, "Date provided") &amp;&amp;
ISBLANK(Date_Established__c)</errorConditionFormula>
    <errorDisplayField>Date_Established__c</errorDisplayField>
    <errorMessage>Date established should not be null if the Date Established Question = Date Provided</errorMessage>
</ValidationRule>